--- a/apps/monitoring/base/grafana/grafana-ingress.yaml
+++ b/apps/monitoring/base/grafana/grafana-ingress.yaml
@@ -9,7 +9,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`grafana.lab.apexvirtual.dev`)
+    - match: Host(`grafana.lab.apexvirtual.internal`)
       kind: Rule
       services:
         - name: grafana
