--- a/apps/homepage/base/kustomization.yaml
+++ b/apps/homepage/base/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: homepage
-resources:
-  - homepage-app.yaml
+#resources:
+  # Manifests available upon request
+  # - deployment.yaml
+  # - service.yaml
+  # - ingress.yaml
