--- a/apps/traefik/envs/prod/ingress.yaml
+++ b/apps/traefik/envs/prod/ingress.yaml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`traefik.lab.apexvirtual.internal`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    - match: Host(`traefik.lab.apexvirtual.internal`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
       kind: Rule
       services:
         - name: api@internal
