--- a/apps/monitoring/base/prometheus/prometheus-service-ext.yaml
+++ b/apps/monitoring/base/prometheus/prometheus-service-ext.yaml
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       port: 9090
       targetPort: web
-  loadBalancerIP:
+  # loadBalancerIP:  # Assigned by LoadBalancer
